your-app-name/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
